# Master_PI_BLE-Booster

./: readme.md
display/fonts/: bahnschrift16.zi  bahnschrift24.zi  bahnschrift32.zi
display/images/: OpenCollarButton.psd  background.psd  background2.psd  exitButton.psd  firstpage.psd  monkey-not-selected.psd  monkey-selected.psd  popup.psd  resetButton.psd  toggleButton.psd
display_nrf/display_controller/: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp_ns.overlay  prj.conf
display_nrf/display_controller/src/: main.c
display_nrf/display_controller/src/tasks/: connection.c  connection.h  display.c  display.h  display_controller.c  display_controller.h  global.h  monkeylist.c  monkeylist.h
nRF/: .gitignore  CMakeLists.txt  nrf21540dk_nrf52840.overlay  prj.conf
nRF/src/: define.h  main.c
nRF/src/task/: ble.c  ble.h  button_manager.c  button_manager.h  connection.c  connection.h  display.c  display.h  display_controller.c  display_controller.h  global.h  led.c  led.h  monkeylist.c  monkeylist.h  snes_client.c
nRF/src/task/ble/: ble.c  ble.h  snes_client.h
uml/: class_ble.drawio  class_display.drawio  class_display_controller.drawio  class_general.drawio  class_monkeylist.drawio  class_snes.drawio  class_snes_client.drawio  connectionSequence.drawio  openCollarSequence.drawio
