cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

project(display_controller)

target_sources(app PRIVATE src/main.c)
target_sources(app PRIVATE src/tasks/display.c)
target_sources(app PRIVATE src/tasks/display.h)
target_sources(app PRIVATE src/tasks/display_controller.c)
target_sources(app PRIVATE src/tasks/display_controller.h)
target_sources(app PRIVATE src/tasks/button_manager.c)
target_sources(app PRIVATE src/tasks/button_manager.h)
target_sources(app PRIVATE src/tasks/monkeylist.c)
target_sources(app PRIVATE src/tasks/monkeylist.h)
target_sources(app PRIVATE src/tasks/connection.c)
target_sources(app PRIVATE src/tasks/connection.h)
target_sources(app PRIVATE src/tasks/global.h)